@@ -33,15 +33,19 @@
  */
 #include <stdint.h>
 
-int compare_and_exchange(int32_t * exp_ptr, int32_t * tar_ptr, const int32_t src)
+int compare_and_exchange_ptr(void * exp_ptr, void * tar_ptr, const void * src_ptr)
 {
 	int rv;
 
 	asm("movl %1, %%eax; lock cmpxchg %4, %3;jz __eq; movl %%eax, %1; movl $-1, %0; jmp __done; __eq: xor %0, %0; __done:" 
-	: "=r" (rv), "=r" (*exp_ptr)
-	: "1" (*exp_ptr), "m" (*tar_ptr), "r" (src)
+	: "=r" (rv), "=r" (*(void**)exp_ptr)
+	: "1" (*(void**)exp_ptr), "m" (*(void**)tar_ptr), "r" (src_ptr)
 	: "%eax");	
 
 	return rv;
 }
 
+int compare_and_exchange_int(int32_t * exp_ptr, int32_t * tar_ptr, int32_t src)
+{
+	return compare_and_exchange_ptr(exp_ptr, tar_ptr, (void*)src)
+}
