@@ -1,3 +1,8 @@
+2004-08-11	blytkerchan
+	* compare_and_exchange.c (compare_and_exchange_ptr): move from
+	compare_and_exchange
+	(compare_and_exchange_int): new function
+
 2004-08-10	blytkerchan
 	* fetch_and_add.c (fetch_and_add): no longer cast third param of
 	compare_and_exchange
